generate blocking voids ;)